--- a/docs/tutorials/mnist.ipynb
+++ b/docs/tutorials/mnist.ipynb
@@ -88,13 +88,7 @@
       },
       "outputs": [],
       "source": [
-        "try :\n",
-        "  import tensorflow\n",
-        "except:\n",
-        "  print(\"installing tensorflow\");\n",
-        "  !pip install tensorflow\n",
-        "  import tensoflow\n",
-        "  print(\"tensorflow installed successfully!\")"
+        "!pip install tensorflow"
       ]
     },
     {
@@ -108,24 +102,13 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip3 install --upgrade pip"
-      ],
-      "metadata": {
-        "id": "QHJuMMogIQMX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "saFHsRDpkvkH"
       },
       "outputs": [],
       "source": [
-        "!pip3 install -U tensorflow-quantum"
+        "!pip install tensorflow-quantum"
       ]
     },
     {
